fix logo spacing

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,20 +1,4 @@
 /******************************
-* LOGO
-******************************/
-.logo {
-    display: block;
-    text-align: center;
-    svg {
-        width: 100%;
-        @include desktop-and-up {
-            max-height: 50px;
-            width: auto;
-        }
-    }
-}
-
-
-/******************************
 * NAV
 ******************************/
 .listen--active .icon-listen,
